# JaszczurHAL

./: .gitignore  CHANGELOG.md  CMakeLists.txt  JaszczurHAL_API.md  README.md  build_arduino_lib.sh  build_stm32_lib.sh  library.properties
.github/workflows/: ci.yml
arduino_lib/: CMakeLists.txt  toolchain_rp2040.cmake
src/: HAL_FLAGS.txt  JaszczurHAL.h  libConfig.h  tools.h  tools_c.h
src/arduino_host_stubs/: Arduino.h  SD.h  SPI.h
src/hal/: hal.h  hal_adc.h  hal_bits.h  hal_can.h  hal_can_util.cpp  hal_config.cpp  hal_config.h  hal_crypto.cpp  hal_crypto.h  hal_display.h  hal_eeprom.h  hal_external_adc.h  hal_gpio.h  hal_gps.h  hal_i2c.h  hal_i2c_slave.h  hal_kv.cpp  hal_kv.h  hal_math.h  hal_pid_controller.cpp  hal_pid_controller.h  hal_pwm.h  hal_pwm_freq.h  hal_rgb_led.h  hal_sc_auth.h  hal_serial.h  hal_serial_frame.h  hal_serial_session.h  hal_serial_session_vocabulary.h  hal_soft_timer.cpp  hal_soft_timer.h  hal_spi.h  hal_swserial.h  hal_sync.h  hal_system.h  hal_thermocouple.h  hal_time.h  hal_timer.h  hal_uart.h  hal_uart_config.h  (+1 more)
src/hal/impl/.mock/: hal_adc.cpp  hal_can.cpp  hal_display.cpp  hal_eeprom.cpp  hal_external_adc.cpp  hal_gpio.cpp  hal_gps.cpp  hal_i2c.cpp  hal_i2c_slave.cpp  hal_mock.h  hal_pwm.cpp  hal_pwm_freq.cpp  hal_rgb_led.cpp  hal_serial.cpp  hal_spi.cpp  hal_swserial.cpp  hal_sync.cpp  hal_system.cpp  hal_thermocouple.cpp  hal_time.cpp  hal_timer.cpp  hal_uart.cpp  hal_wifi.cpp
src/hal/impl/arduino/: hal_adc.cpp  hal_can.cpp  hal_display.cpp  hal_eeprom.cpp  hal_external_adc.cpp  hal_gpio.cpp  hal_gps.cpp  hal_i2c.cpp  hal_i2c_slave.cpp  hal_pwm.cpp  hal_pwm_freq.cpp  hal_rgb_led.cpp  hal_serial.cpp  hal_spi.cpp  hal_swserial.cpp  hal_sync.cpp  hal_system.cpp  hal_thermocouple.cpp  hal_time.cpp  hal_timer.cpp  hal_uart.cpp  hal_wifi.cpp
src/hal/impl/arduino/drivers/ADS1X15/: ADS1X15.cpp
src/hal/impl/arduino/drivers/Adafruit_BusIO/: Adafruit_BusIO_Register.cpp  Adafruit_GenericDevice.cpp  Adafruit_I2CDevice.cpp  Adafruit_SPIDevice.cpp  Adafruit_SPIDevice.h
src/hal/impl/arduino/drivers/Adafruit_GFX_Library/: Adafruit_GFX.cpp  Adafruit_GrayOLED.cpp  Adafruit_SPITFT.cpp  Adafruit_SPITFT.h
src/hal/impl/arduino/drivers/Adafruit_GFX_Library/Fonts/: FreeMono12pt7b.h  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeMonoBoldOblique18pt7b.h  FreeMonoBoldOblique24pt7b.h  FreeMonoBoldOblique9pt7b.h  FreeMonoOblique12pt7b.h  FreeMonoOblique18pt7b.h  FreeMonoOblique24pt7b.h  FreeMonoOblique9pt7b.h  FreeSans18pt7b.h  FreeSansBoldOblique12pt7b.h  FreeSansBoldOblique18pt7b.h  FreeSansBoldOblique24pt7b.h  FreeSansBoldOblique9pt7b.h  FreeSansOblique12pt7b.h  FreeSansOblique18pt7b.h  FreeSansOblique24pt7b.h  FreeSansOblique9pt7b.h  FreeSerif12pt7b.h  FreeSerif18pt7b.h  FreeSerif24pt7b.h  FreeSerif9pt7b.h  FreeSerifBold12pt7b.h  FreeSerifBold18pt7b.h  FreeSerifBold24pt7b.h  FreeSerifBold9pt7b.h  FreeSerifBoldItalic12pt7b.h  FreeSerifBoldItalic18pt7b.h  FreeSerifBoldItalic24pt7b.h  FreeSerifBoldItalic9pt7b.h  FreeSerifItalic12pt7b.h  FreeSerifItalic18pt7b.h  FreeSerifItalic24pt7b.h  (+5 more)
src/hal/impl/arduino/drivers/Adafruit_ILI9341/: Adafruit_ILI9341.cpp  Adafruit_ILI9341.h
src/hal/impl/arduino/drivers/Adafruit_MCP9600/: Adafruit_MCP9600.cpp  Adafruit_MCP9600.h  Adafruit_MCP9601.cpp  Adafruit_MCP9601.h
src/hal/impl/arduino/drivers/Adafruit_NeoPixel/: Adafruit_NeoPixel.cpp  Adafruit_Neopixel_RP2.cpp
src/hal/impl/arduino/drivers/Adafruit_SSD1306/: Adafruit_SSD1306.cpp  Adafruit_SSD1306.h
src/hal/impl/arduino/drivers/Adafruit_ST7735_and_ST7789_Library/: Adafruit_ST7735.cpp  Adafruit_ST7789.cpp  Adafruit_ST7796S.cpp  Adafruit_ST77xx.cpp
src/hal/impl/arduino/drivers/Adafruit_Zero_DMA_Library/: Adafruit_ZeroDMA.cpp
src/hal/impl/arduino/drivers/MAX6675/: max6675.cpp  max6675.h
src/hal/impl/arduino/drivers/MCP2515/: mcp_can.cpp  mcp_can.h
src/hal/impl/arduino/drivers/TinyGPSPlus/src/: TinyGPS++.cpp
src/hal/impl/stm32g474/: hal_adc.cpp  hal_gpio.cpp  hal_i2c.cpp  hal_pwm.cpp  hal_serial.cpp  hal_spi.cpp  hal_sync.cpp  hal_system.cpp  hal_time.cpp  hal_timer.cpp  hal_uart.cpp
src/utils/: SmartTimers.cpp  SmartTimers.h  cJSON.c  cJSON.h  cJSON_Utils.c  cJSON_Utils.h  draw7Segment.cpp  draw7Segment.h  multicoreWatchdog.cpp  multicoreWatchdog.h  pidController.cpp  pidController.h  tools.cpp  tools.h  tools_api.h  tools_common_defs.h  tools_logger_config.h  tools_printable_config.h  tools_sensor_config.h  unity.c  unity.h  unity_config.h  unity_internals.h
stm32_lib/: CMakeLists.txt  STM32G474_porting_progress.md  toolchain_stm32g474.cmake
tests/: CMakeLists.txt  test_SmartTimers.cpp  test_hal_adc.cpp  test_hal_bits.cpp  test_hal_can.cpp  test_hal_crypto.cpp  test_hal_display.cpp  test_hal_eeprom.cpp  test_hal_external_adc.cpp  test_hal_gpio.cpp  test_hal_gps.cpp  test_hal_i2c.cpp  test_hal_i2c_slave.cpp  test_hal_kv.cpp  test_hal_pwm.cpp  test_hal_rgb_led.cpp  test_hal_serial.cpp  test_hal_serial_session.cpp  test_hal_serial_session_vocabulary.cpp  test_hal_soft_timer.cpp  test_hal_spi.cpp  test_hal_swserial.cpp  test_hal_system.cpp  test_hal_thermocouple.cpp  test_hal_time.cpp  test_hal_timer.cpp  test_hal_uart.cpp  test_hal_wifi.cpp  test_multicoreWatchdog.cpp  test_pidController.cpp  test_tools.cpp
vscode-templates/: README.md
vscode-templates/linux/: README.md  hal_project_config.h
vscode-templates/linux/scripts/: build.sh  serial-persistent.py
vscode-templates/windows/: README.md  hal_project_config.h
vscode-templates/windows/scripts/: arduino_vscode.py  refresh-intellisense.sh  serial-monitor.py  serial-monitor.sh  serial-persistent.py  upload-uf2.sh
